menyelesaikan alert validator no telp sama

--- a/views/customer/pelanggan.ejs
+++ b/views/customer/pelanggan.ejs
@@ -43,7 +43,7 @@
                         <% produk.forEach(el => { %> 
                         <tr>
                             <th scope="row"><%= el.no %> </th>
-                            <td> <%= el.namaCustomer %> </td>
+                            <td class="namaCustomer"> <%= el.namaCustomer %> </td>
                             <td> <%= el.noTelp %> </td>
                             <td> <%= el.alamat %> </td>
                             <td><button type="button" class="btn btn-primary btn-sm text-center"><i class="bi bi-clipboard-data text-center"></i></button></td>
