--- a/views/customer/tambahData.ejs
+++ b/views/customer/tambahData.ejs
@@ -14,6 +14,12 @@
     <div class="row justify-content-center">
         <div class="col-5">
             <div class="row align-items-center">
+                <% if (pesan) { %>
+                    <div class="alert alert-danger" role="alert">
+                        No telp sudah terdaftar, Masukan No Lain
+                     </div>
+                <% } %>
+        
                 <div class="col-12">
                     <p class="judulTambah"> INPUT DATA PELANGGAN </p>
                 </div>
@@ -44,7 +50,6 @@
                 name="alamatCustomer"
                 placeholder="Alamat"
                 id="alamats"
-                required 
                 />   
                 <br><br>
                 <button class="btn btn-danger" type="submit">Submit</button>
