--- a/views/customer/tambahData.ejs
+++ b/views/customer/tambahData.ejs
@@ -17,7 +17,7 @@
                 <% if (pesan) { %>
                     <div class="alert alert-danger" role="alert">
                         No telp sudah terdaftar, Masukan No Lain
-                     </div>
+                    </div>
                 <% } %>
         
                 <div class="col-12">
@@ -52,7 +52,7 @@
                 id="alamats"
                 />   
                 <br><br>
-                <button class="btn btn-danger" type="submit">Submit</button>
+                <button class="btn btn-success" type="submit">Submit</button>
             </form>
         </div>
     </div>
