--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -17,7 +17,7 @@
             <hr class="bg-secondary">
             <br>
             <li class="nav-item">
-            <a class="nav-link text-white" href="/customer/pelanggan"><i class="bi bi-person-plus-fill"></i>DATA PELANGGAN</a>
+            <a class="nav-link text-white" href="/customer/data-pelanggan"><i class="bi bi-person-plus-fill"></i>DATA PELANGGAN</a>
             </li>
             <hr class="bg-secondary">
             <br>
