--- a/views/admin/dasboard.ejs
+++ b/views/admin/dasboard.ejs
@@ -19,10 +19,13 @@
                         <i class="bi bi-person-fill"></i>
                     </div>
                 <h5 class="card-title">Jumlah Pelanggan</h5>
-                <div class="display-4">
-                    12.000
+                <div class="col-9 text-center">
+                    <div class="display-4">
+                        <%= data.length %>
+                    </div>
                 </div>
-                <a href="#" class="nav-link text-white"> Lihat Detail <i class="bi bi-arrow-right"></i></a>
+            
+                <a href="/customer/data-pelanggan" class="nav-link text-white"> Lihat Detail <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </div>
