--- a/views/admin/karyawan.ejs
+++ b/views/admin/karyawan.ejs
@@ -16,7 +16,7 @@
             <p class="lead">Halaman untuk mengatur data karywan</p>
             </div>
             <div class="col-4">
-                <a class="btn btn-secondary   " href="#" role="button">Tambah</a>
+                <a class="btn btn-secondary" href="/tambah-data-karyawan" role="button">Tambah</a>
                 </div>
         </div>
 <br>
