--- a/views/customer/tambahData.ejs
+++ b/views/customer/tambahData.ejs
@@ -8,7 +8,11 @@
     <br>
     <br>
     <br>
-    <h1 class="h1"> <i class="bi bi-person-plus-fill"></i> Tambah Data Pelanggan </h1>
+    <h1 class="h1"><% if (editing) { %><i class="bi bi-pencil-square"></i><% } else { %><i class="bi bi-person-plus-fill"></i><% }  %> <% if (editing) { %>
+        Edit Data
+    <% } else if (staff) {%> 
+        Tambah Karyawan
+    <%} else  {%> Tambah Data <%} %> </h1>
     <hr class="bg-secondary">
 <br><br>
     <div class="row justify-content-center">
@@ -21,18 +25,20 @@
                 <% } %>
         
                 <div class="col-12">
-                    <p class="judulTambah"> INPUT DATA PELANGGAN </p>
+                    <p class="judulTambah"> <% if (editing) { %>EDIT DATA PELANGGAN<% } else { %>INPUT DATA PELANGGAN<% }  %> </p>
                 </div>
                 <br>
                 <br>
             </div>
-            <form action="/customer/tambahdata" method="POST">
+            <form action="<% if (editing) { %>/customer/edit-data
+                <% } else if (staff) {%>/data-tambah-karyawan<%} else  {%>/customer/tambahdata<%} %>" method="POST">
                 <input
                 type="text" 
                 class="form-control"
                 name="namaCustomer"
                 placeholder="Masukan Nama"
                 id="namaCustomers"
+                value="<% if (editing) { %><%= dataP.namaCustomer %> <% } %>"
                 required 
                 />   
                 <input
@@ -42,6 +48,7 @@
                 placeholder="Telp-Hp"
                 id="noHps"
                 min="0"
+                value="<% if (editing) { %><%= dataP.noTelp %> <% } %>"
                 required 
                 />
                 <input
@@ -50,9 +57,24 @@
                 name="alamatCustomer"
                 placeholder="Alamat"
                 id="alamats"
-                />   
-                <br><br>
-                <button class="btn btn-success" type="submit">Submit</button>
+                value="<% if (editing) { %><%= dataP.alamat %> <% } %>"
+                />
+
+                <% if (staff) { %>
+                    <input type="text" name="jabatan"         class="form-control"   placeholder="Jabatan"
+                    id="jabatan">
+                <% } %>
+
+                <% if (editing) { %>
+                    <input type="hidden" value="<%= dataP._id %>" name="idP">
+                <% } %>
+                    <br><br>
+                    
+                <button class="btn btn-success" type="submit"><% if (editing) { %>
+                    Edit Data
+                <% } else if (staff) {%> 
+                    Tambah Karyawan
+                <%} else  {%> Tambah Data <%} %></button>
             </form>
         </div>
     </div>
