--- a/views/admin/dasboard.ejs
+++ b/views/admin/dasboard.ejs
@@ -37,10 +37,12 @@
                         <i class="bi bi-person-circle"></i>
                     </div>
                 <h5 class="card-title">Jumlah Karyawan</h5>
-                <div class="display-4">
-                    12.000
+                <div class="col-9 text-center">
+                    <div class="display-4">
+                        <%= data2.length %>
+                    </div>
                 </div>
-                <a href="#" class="nav-link text-white"> Lihat Detail <i class="bi bi-arrow-right"></i></a>
+                <a href="/karyawan" class="nav-link text-white"> Lihat Detail <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </div>
