--- a/views/admin/karyawan.ejs
+++ b/views/admin/karyawan.ejs
@@ -22,6 +22,10 @@
 <br>
 <br>
 <br>
+
+<% if(produk.length < 1){ %>
+    <h1 class="h4">Data Tidak ada</h1>
+<% } else{ %>  
         <div class="row text-center">
             <table class="table table-striped">
                 <thead>
@@ -36,37 +40,21 @@
                     </tr>
                     </thead>
                     <tbody>
+                        <% produk.forEach(el => { %> 
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                        <td>SUPERVISOR</td>
+                        <th scope="row"><%= el.no %></th>
+                        <td><%= el.namaCustomer %></td>
+                        <td><%= el.noTelp %></td>
+                        <td> <%= el.alamat %> </td>
+                        <td> <%= el.jabatan %></td>
                         <td><button type="button" class="btn btn-warning btn-sm text-center"><i class="bi bi-pencil-square"></i></button></td>
-                        <td><button type="button" class="btn btn-danger btn-sm text-center"><i class="bi bi-trash"></i></button></td>
+                        <td><a class="btn btn-danger btn-sm text-center" href="/hapus-karyawan/<%= el._id %>?hapus=hapus-data"><i class="bi bi-trash"></i></a></td>
                     </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                        <td>ADMIN</td>
-                        <td><button type="button" class="btn btn-warning btn-sm text-center"><i class="bi bi-pencil-square"></i></button></td>
-                        <td><button type="button" class="btn btn-danger btn-sm text-center"><i class="bi bi-trash"></i></button></td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Thornton</td>
-                        <td>Messi</td>
-                        <td>@twitter</td>
-                        <td>ADMIN</td>
-                        <td><button type="button" class="btn btn-warning btn-sm text-center"><i class="bi bi-pencil-square"></i></button></td>
-                        <td><button type="button" class="btn btn-danger btn-sm text-center"><i class="bi bi-trash"></i></button></td>
-                    </tr>
+                    <% }) %>
                     </tbody>
                 </table>
         </div>
-
+    <% } %>
     </div>
 <!-- ! penutupup div yang bawah jangan diganti atau di hapus punya row nav -->
 </div> 
