--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -17,6 +17,6 @@
     
     <title> <%= docTitle %> </title>
     <link rel="stylesheet" href="/css/main.css" />
-    <script defer src="/js/main.js"></script>
+    <script type="module" defer src="/js/main.js"></script>
 
 
