--- a/views/customer/pelanggan.ejs
+++ b/views/customer/pelanggan.ejs
@@ -13,7 +13,7 @@
             <% } else  { %>
                 bi bi-person-plus-fill
             <% } %>"></i>   <% if (hapus) { %>
-            Hapus Data
+            Hapus Data <%= produk[0].namaCustomer %> 
         <% } else  { %>
             Data pelanggan
            <% } %> </h1>
@@ -60,8 +60,10 @@
                             <td> <%= el.noTelp %> </td>
                             <td> <%= el.alamat %> </td>
                             <% if (!hapus) { %>
-                                <td><button type="button" class="btn btn-primary btn-sm text-center"><i class="bi bi-clipboard-data text-center"></i></button></td>
+                                <td><a class="btn btn-primary btn-sm text-center ukuran" href="/customer/ukuran/<%= el._id %>"><i class="bi bi-clipboard-data text-center"></i></a></td>
+
                                 <td><a class="btn btn-warning btn-sm text-center" href="/customer/edit-data/<%= el._id %>?edit=edit-data"><i class="bi bi-pencil-square"></i></a></td>
+
                                 <td><a class="btn btn-danger btn-sm text-center" href="/customer/hapus-data/<%= el._id %>?delete=hapus-data"><i class="bi bi-trash"></i></a></td>
                             <% } %>
 
@@ -78,6 +80,7 @@
                     </table>    
         </div>
     <% } %>
+
 
         
     </div>
