--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,212 +1,127 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
+
+* {
   margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Josefin Sans", sans-serif;
 }
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+
+body {
+  background-color: #f3f5f9;
+}
+
+.wrapper {
+  display: flex;
+  position: relative;
+}
+
+.wrapper .sidebar {
+  width: 200px;
+  height: 100%;
+  background: #4b4276;
+  padding: 30px 0px;
+  position: fixed;
+}
+
+.wrapper .sidebar h2 {
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.wrapper .sidebar ul li {
+  padding: 15px;
+  margin-left: -35px;
+  border-bottom: 1px solid #bdb8d7;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+  border-top: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.wrapper .sidebar ul li a {
+  color: #bdb8d7;
   display: block;
 }
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+
+.wrapper .sidebar ul li a .fas {
+  width: 25px;
 }
 
-/* My Style */
-
-.bgyellow {
-  position: fixed;
-  height: 100%;
+.wrapper .sidebar ul li:hover {
+  background-color: #594f8d;
 }
 
-.bi {
-  margin-right: 10px;
-}
-.nav-item {
-  padding-top: 10px;
-  padding-bottom: 10px;
+.wrapper .sidebar ul li:hover a {
+  color: #fff;
 }
 
-.nav-item:hover {
-  background-color: gray;
+.wrapper .sidebar .social_media {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
 }
 
-.aktive {
-  background-color: gray;
+.wrapper .sidebar .social_media a {
+  display: block;
+  width: 40px;
+  background: #594f8d;
+  height: 40px;
+  line-height: 45px;
+  text-align: center;
+  margin: 0 5px;
+  color: #bdb8d7;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
-.activered {
-  background-color: rgb(124, 170, 212);
+.wrapper .main_content {
+  width: 100%;
+  margin-left: 200px;
 }
 
-.aktivegreen {
-  background-color: rgb(165, 235, 144);
+.wrapper .main_content .header {
+  padding: 20px;
+  background: #fff;
+  color: #717171;
+  border-bottom: 1px solid #e0e4e8;
 }
 
-.card-title {
-  text-transform: uppercase;
+.wrapper .main_content .info {
+  margin: 20px;
+  color: #717171;
+  line-height: 25px;
 }
 
-.display-4 {
-  font-weight: bold;
+a {
+  text-decoration: none;
 }
 
 .card-body-icon {
   position: absolute;
   z-index: 0;
-  top: 25px;
-  right: -4px;
+  top: 44px;
+  right: 12px;
   opacity: 0.5;
   font-size: 90px;
 }
 
-.table > :not(caption) > * > * {
-  padding: 1rem 0.5rem;
-}
-
-input {
-  margin-top: 20px;
-}
-h1 {
-  text-transform: uppercase;
-  font-family: monospace;
-}
-.judulTambah {
-  border-bottom: 1px black solid;
-  width: 230px;
-  font-weight: bold;
-  font-size: large;
+.aktive {
+  background-color: #594f8d;
 }
 td {
   text-transform: capitalize;
 }
 
-.hapus-data {
-  margin-top: 30px;
+.ukuranbaju {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.form-select {
-  display: inline;
-  width: 60%;
-  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-.keren {
-  padding: 10px 5px;
-}
-select {
-  padding: 10px;
+.lead {
+  text-transform: capitalize;
 }
