--- a/views/customer/ukuranBaju.ejs
+++ b/views/customer/ukuranBaju.ejs
@@ -1,32 +1,215 @@
-<%- include('../includes/head.ejs') %>
-<!-- tambah css (Option) -->
+<%- include('../includes/head.ejs') %> 
+
 </head>
 <body>
-<%- include('../includes/nav.ejs') %>
-<div class="col-md-10 mb-5 p-5 pt-2">
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="wrapper">
+    <%- include('../includes/nav.ejs') %>
+    <div class="main_content">
+        <div class="header">Ukuran <%= produk.namaCustomer %>  <i class="bi bi-clipboard-data text-center"></i></div>
 
-    <h1 class="h1">Ukuran <%= produk.namaCustomer %>  <i class="bi bi-clipboard-data text-center"></i></h1>
-    
-    <hr class="bg-secondary">
-    <br>
-    <br>
-    <br>
-    <div class="row text-center justify-content-center">
-        <h1>baju</h1>
+        <div class="info">
+            <br>
+            <form action="/ukuran/baju-fix" method="POST">
+                <div class="row justify-content-center ukuranRow">
+                    <div class="col-10">
+                    <p class="leads">BAJU</p>
+                    <div class="row baju-row">
+                        <div class="col-1">
+                            <p class="lead">1</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="lead">panjang badan</p>
+                    </div>
+                    <div class="col-8">
+                        <input class="form-control ukuranbaju" type="text" name="panjangBadan">
+                    </div>
+                
+                    <div class="col-1">
+                            <p class="lead">2</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="lead">panjang tangan</p>
+                    </div>
+                    <div class="col-4">
+                        <input class="form-control ukuranbaju" type="text" placeholder="Lengan Panjang" name="lenganPanjang">
+                    </div>
+                    <div class="col-4">
+                        <input class="form-control ukuranbaju" type="text" placeholder="Lengan Pendek" name="lenganPendek">
+                    </div>
+                
+                    <div class="col-1">
+                        <p class="lead">3</p>
+                </div>
+                <div class="col-3">
+                    <p class="lead">pundak</p>
+                </div>
+                <div class="col-8">
+                    <input class="form-control ukuranbaju" type="text" name="pundak">
+                </div>
+                
+                <div class="col-1">
+                        <p class="lead">4</p>
+                </div>
+                <div class="col-3">
+                    <p class="lead">Lingkar Ketiak</p>
+                </div>
+                <div class="col-8">
+                    <input class="form-control ukuranbaju" type="text" name="lingkarKetiak">
+                </div>
+                
+            
+                <div class="col-1">
+                    <p class="lead">5</p>
+            </div>
+            <div class="col-3">
+                <p class="lead">Lingkar Ujung Tangan</p>
+            </div>
+            <div class="col-8">
+                <input class="form-control ukuranbaju" type="text" name="lingkarUjungTangan">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">6</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Lengan Atas</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="lenganAtas">
+            </div>
 
+            <div class="col-1">
+                <p class="lead">7</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Lengan Tengah</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="lenganTengah">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">8</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Marset</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="marset">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">9</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Leher</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="leher">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">10</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Dada</p>
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Dada Depan" name="dadaDepan">
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Dada Belakang" name="dadaBelakang">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">11</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Atas</p>
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Atas Depan" name="atasDepan">
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Atas Belakang" name="atasBelakang">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">12</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Perut</p>
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Perut Depan" name="perutDepan">
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Perut Belakang" name="perutBelakang">
+            </div>
+            
+            <div class="col-1">
+                <p class="lead">13</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Pinggul </p>
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Pinggul  Depan" name="pinggulDepan">
+            </div>
+            <div class="col-4">
+                <input class="form-control ukuranbaju" type="text" placeholder="Pinggul  Belakang" name="pinggulBelakang">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">14</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Lingkar Dada</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="lingkarDada">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">15</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Lingkar Perut</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="lingkarPerut">
+            </div>
+            
+            
+            <div class="col-1">
+                <p class="lead">16</p>
+            </div>
+            <div class="col-3">
+            <p class="lead">Lingkar Pinggul</p>
+            </div>
+            <div class="col-8">
+            <input class="form-control ukuranbaju" type="text" name="lingkarPinggul">
+            </div>
+                <!--  -->
+                <div class="col-1 m-auto">
+                    <br>
+                    <button class="btn btn-success" type="submit">Submit</button>
+                </div>
+            
+                </div>
+                </div>
+            </form>
+        </div>
+        <div class="col-1"></div>
+            </div>
     </div>
-    
-
-</div>
-<!-- ! penutupup div yang bawah jangan diganti atau di hapus punya row nav -->
-</div> 
-
-
-<%- include('../includes/navFixed.ejs') %>
-
-
+    </div>
 <%- include('../includes/end.ejs') %>
