--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    
+<head>
+    <meta charset="UTF-8" />
     <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-        crossorigin="anonymous"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css"
     />
-    
-    <title> <%= docTitle %> </title>
+
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+    crossorigin="anonymous"
+    />
+
+    <script
+    type="module"
+    defer
+    src="https://kit.fontawesome.com/b99e675b6e.js"
+    ></script>
+    <script
+    src="https://kit.fontawesome.com/yourcode.js"
+    crossorigin="anonymous"
+    ></script>
+
+    <title><%= docTitle %> </title>
     <link rel="stylesheet" href="/css/main.css" />
     <script type="module" defer src="/js/main.js"></script>
-
-
